--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   </header>
 
   <!-- Insert Quiz Questions Here -->
-  <section class="hidden" id="quiz-questions">
+  <section class="hidden" id="test">
+    <h2 class="question" id="question">Quiz Yourself</h2>
     <div class="answer-list" id="answer-list">
         <div class="options-container" id="A">                  
             <p class="option-text" ></p>
@@ -44,19 +45,15 @@
     </div>
   </section>
 
-  <section class="start-quiz" id="start-quiz">
-    <div class="start-quiz">
-      <span id="ready">6 questions in 60 seconds.</span>
-      <span id="ready">Ready to put your skills to the test?</span>
+    <div class="start" id="start">
+      <span>6 questions in 60 seconds.</span>
+      <span>Ready to put your skills to the test?</span>
+      <button class="startbtn" id="startbtn">Start Quiz</button>
     </div>
-  </br>
-    <div class="btn">
-      <button class="start-quiz-btn" id="start-quiz-btn" type="">Start Quiz</button>
-    </div>
+
     <div class="correct" id="correct">
       <span id="the-answer"></span>
     </div>
-  </section>
 
   <footer>
     <nav>
